<resources>
    <string name="app_name">Shows-Mihael-Rodek</string>
    <string name="login_text">Login</string>
    <string name="login_alert">In order to continue please log in.</string>
    <string name="shows">Shows</string>
    <string name="submit">Submit</string>
    <string name="write_a_review">Write a review</string>
    <string name="no_reviews_yet">No reviews yet.</string>
    <string name="review">Review</string>
    <string name="x_reviews_y_average">X REVIEWS, Y AVERAGE</string>
    <string name="star_rating">5</string>
    <string name="username">Username</string>
    <string name="no_shows">Your shows are not showing. Get it?</string>
    <string name="welcome">Welcome</string>
    <string name="password">Password</string>
    <string name="invalid_mail">Please enter valid e-mail.</string>
    <string name="invalid_password">Password should be at least 6 characters long.</string>
    <string name="rate_show">Please rate the show.</string>
    <string name="comment">Comment</string>
    <string name="description">Description</string>
    <string name="remember_me">Remember me</string>
    <string name="change_profile_photo">Change profile photo</string>
    <string name="logout">Logout</string>
    <string name="no_permission">Please check your permissions in Settings.</string>
    <string name="settings">Settings</string>
    <string name="register">Register</string>
    <string name="repeat_password">Repeat password</string>
    <string name="registere_successful">Registration successful!</string>
</resources>