<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".ShowDetailsActivity">

<com.google.android.material.appbar.AppBarLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fitsSystemWindows="true"
    android:background="@color/white">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_scrollFlags="snap"
        app:titleEnabled="true">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:navigationIcon="@drawable/ic_back_arrow"
            android:background="@color/white"
            android:fitsSystemWindows="true"
            tools:title="Dark"
            style="bold"
            app:layout_scrollFlags="scroll|enterAlways"/>
    </com.google.android.material.appbar.AppBarLayout>

</com.google.android.material.appbar.AppBarLayout>

<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/ShowDetailsImage"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            tools:src="@drawable/dark"
            android:layout_marginTop="32dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize10Percent"
            />

        <TextView
            android:id="@+id/ShowDetailsDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="Description"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ShowDetailsImage"
            android:layout_margin="24dp"/>

        <TextView
            android:id="@+id/review"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/review"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ShowDetailsDescription"
            android:layout_marginTop="32dp"
            android:layout_marginStart="24dp"/>

        <TextView
            android:id="@+id/ratingBarAverageText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/review"
            android:layout_marginTop="16dp"
            android:layout_marginStart="24dp"
            android:visibility="gone"
            android:textAllCaps="true"/>

        <androidx.appcompat.widget.AppCompatRatingBar
            android:id="@+id/ratingBarAverage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="5"
            tools:rating="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/review"
            android:layout_marginTop="40dp"
            android:layout_marginStart="24dp"
            android:progressTint="@color/purple_500"
            android:secondaryProgressTint="@color/purple_500"
            style="@style/Widget.AppCompat.RatingBar.Indicator"
            android:visibility="gone"
            android:clickable="false"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/showRecyclerView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_margin="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ratingBarAverage"
            app:layout_constraintBottom_toTopOf="@id/writeReview"
            tools:listitem="@layout/item_review"
            android:visibility="gone"
            />

        <TextView
            android:id="@+id/emptyStateLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/no_reviews_yet"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/review"
            app:layout_constraintBottom_toTopOf="@id/writeReview"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/writeReview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/write_a_review"
            android:layout_margin="24dp"
            android:textColor="@color/white"
            app:cornerRadius="40dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textAllCaps="false"
            android:background="@drawable/review_rounded"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
